# orderbook-funzionante-con-rollover-

./: .gitignore  analytics_engine.py  analyze_delta.py  dashboard.py  ingestion_engine.py  market_state.json  open_positions.json  paper_trader.py  paper_trading_engine.py  rollover_manager.py  strategy_engine.py  telegram_notifier.py  test_connectivity.py  trades_history.csv
KDE-main/: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
KDE-main/src/: lib.rs
static/: index.html
