[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "polymarket_kde"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "polars>=0.20",
    "seaborn>=0.13",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "requests>=2.31",
]

[tool.maturin]
features = ["pyo3/extension-module"]
